# Device-Driver-Kata

./: .gitignore  README.md  license.txt
C/: .gitignore  CMakeLists.txt  DeviceDriver.c  DeviceDriver.h  DeviceDriverTest.c  FlashMemoryDevice.h  README.md
CSharp/: .gitignore  DeviceDriver.cs  DeviceDriverTest.cs  FlashMemoryDevice.cs  IFlashMemoryDevice.cs  device.csproj  device.sln
CSharp/Properties/: AssemblyInfo.cs
Go/: driver.go  driver_test.go  memory.go
Java/: .gitignore  pom.xml
JavaScript/: .gitignore  package.json
JavaScript/src/: devicedriver.js  flashmemorydevice.js
JavaScript/test/: devicedriver_test.js
Kotlin/: build.gradle.kts  settings.gradle.kts
TypeScript/: .gitignore  package.json  tsconfig.json
TypeScript/test/: devicedriver.spec.ts
TypeScript_Jest/: .gitignore  package.json  tsconfig.json
TypeScript_Jest/src/: devicedriver.ts  flashmemorydevice.ts
TypeScript_Jest/test/: devicedriver.spec.ts
c_ceedling/: CMakeLists.txt
c_ceedling/src/: CMakeLists.txt  device_driver.c  device_driver.h  flash_memory_device.h
c_ceedling/test/: CMakeLists.txt  test_device_driver.c
cpp/: .gitignore  DeviceDriver.cpp  DeviceDriver.hpp  DeviceDriverTest.cpp  FlashMemoryDevice.hpp  GMockMemoryDevice.hpp  MockMemoryDevice.cpp  MockMemoryDevice.hpp  README.md  makefile
php/: .gitignore  composer.json  phpunit.xml
php/src/CodeKata/: DeviceDriver.php  FlashMemoryDevice.php
php/tests/CodeKata/: DeviceDriverTest.php
python/: .gitignore  device_driver.py  hardware_interface.py  test_device_driver.py
(+6 files in other folders)
